--- a/src/components/theme/ThemesToggle.module.scss
+++ b/src/components/theme/ThemesToggle.module.scss
@@ -13,7 +13,7 @@
   @media all and (min-width: 480px) and (max-width: 1024px) {
     top: 0%;
     position: absolute;
-    left: -10%;
+    left: -13%;
     margin: auto;
     height: 73px;
     width: 80px;
@@ -24,8 +24,8 @@
     z-index: 100000;
     margin: inherit;
     left: 26%;
-    height: 70px;
-    width: 78px;
+    height: 8.2%;
+    width: 20%;
   }
 
   &:before {
