--- a/src/sections/about/About.module.scss
+++ b/src/sections/about/About.module.scss
@@ -45,7 +45,7 @@
   position: relative;
 
   @media all and (max-width: 480px) {
-    background-image: url("../../assets/block2/mobile/Drop.svg");
+    background-image: var(--dropBgMobile);
     height: 72vh;
   }
 }
